Incorporating block abstraction and supporting test-cases.
git-svn-id: https://svn.apache.org/repos/asf/avalon/trunk@15816 13f79535-47bb-0310-9956-ffa450edef68